--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
       }
 
       .title1 {
-        font-size: 42px;
+        font-size: 40px;
         font-weight: 700;
         line-height: 1.3;
         text-align: center;
       }
       .title2 {
-        font-size: 30px;
+        font-size: 28px;
         font-weight: 700;
         text-transform: uppercase;
       }
@@ -220,7 +220,7 @@
 
       /* Section */
       .section:not(.last-child) {
-        margin-bottom: 50px;
+        margin-bottom: 48px;
       }
       .project {
         margin-left: 80px;
@@ -254,8 +254,8 @@
       </section>
       <section class="flex-center justify-content-around mt-2">
         <div style="max-width: 70%">
-          Front End Developer with 4 years of experience working with JavaScript/Typescript,
-          HTML/CSS, using ReactJs/Angular framework to deliver exceptional customer experiences.
+          Front End Developer with 4.5 years of experience working with JavaScript/Typescript,
+          HTML/CSS, using ReactJs/Angular/Vue framework to deliver exceptional customer experiences.
         </div>
         <div style="max-width: 30%">
           <p style="text-align: end">
@@ -265,7 +265,6 @@
           </p>
         </div>
       </section>
-
       <!-- ABOUT ME -->
 
       <!-- EXPERIENCE -->
@@ -282,6 +281,67 @@
           <li class="project">
             <div class="flex-center" style="justify-content: space-between">
               <div class="flex-center">
+                <span class="title2">Asean Securities —</span>&nbsp;
+                <span class="sub__title"> Dang Thai Than, Hoan Kiem, Ha Noi</span>
+              </div>
+              <span class="sub__title">10/2023 - present</span>
+            </div>
+            <div class="flex-center">
+              <span class="sub__title">Project:</span>
+              <span class="sub__title" style="color: black"> &nbsp; Analysis Center</span>
+            </div>
+            <div class="flex">
+              <p class="sub__title" style="color: black">
+                <quotes class="sub__title">About project: </quotes>
+                Is low code project, it provides data visualization in the form of tables and
+                charts, integrating trading view to support stocks, etc.
+              </p>
+            </div>
+            <div class="flex-center">
+              <span class="sub__title">Techs:</span>
+              <span class="sub__title" style="color: black">
+                &nbsp; Vue 3 Composition API/ JavaScript/ pinia/ Vuetify/ etc.
+              </span>
+            </div>
+            <div class="flex-center">
+              <span class="sub__title">Members:</span>
+              <span class="sub__title" style="color: black"> &nbsp; 1</span>
+            </div>
+            <div class="flex-center">
+              <span class="sub__title">My roles:</span>
+            </div>
+            <p>Responsible for develop Analysis Center application</p>
+            <p>Designed, and developed many features such as:</p>
+            <ul>
+              <li class="tasks">
+                Build base project, multi lang, responsive, components reusable, multi theme, etc.
+                base on Vuetify
+              </li>
+              <li class="tasks">
+                Visualization data in both table and chart formats. Allow switching between the
+                table and charts to cater to the habits, devices, timing, etc. of customers.
+              </li>
+              <li class="tasks">
+                Visualize data in Table: allow customize Table, pinned rows top/bottom, pinned
+                columns left/right, change row/column color, sort, change column position, etc.
+              </li>
+              <li class="tasks">
+                Visualize data in Charts: Provide many chart: column, bar, line, spLine, area,
+                areaSpLine, etc. Allow switch bettwen chart type. Allow customize Chart:
+                show/hidden, YAxis, XAxis, tooltip, color, lable, format label, etc.
+              </li>
+              <li class="tasks">Embet and customize Trading view for application</li>
+              <li class="tasks">etc.</li>
+            </ul>
+            <p>Build application with max performance</p>
+            <p>Maintain, improve available features</p>
+            <p>Collaborated with the deployment team to bring products to customers</p>
+          </li>
+
+          <!-- IRIS SKYNET -->
+          <li class="project">
+            <div class="flex-center" style="justify-content: space-between">
+              <div class="flex-center">
                 <span class="title2">IRIS SECURITY —</span>&nbsp;
                 <span class="sub__title"> Tam Trinh, Hoang Mai, Ha Noi</span>
               </div>
@@ -294,14 +354,14 @@
             <div class="flex">
               <p class="sub__title" style="color: black">
                 <quotes class="sub__title">About project: </quotes>
-                Project provides many features in the field of cyber security and information
-                security, such as: dashboard, monitoring, alerting, querying, ticketing,...
+                The project provides many features in the field of cyber security and information
+                security, such as: dashboard, monitoring, alerting, querying, ticketing, etc.
               </p>
             </div>
             <div class="flex-center">
               <span class="sub__title">Techs:</span>
               <span class="sub__title" style="color: black">
-                &nbsp; ReactJS/ JavaScript/ Recoil/ Material UI...
+                &nbsp; ReactJS/ JavaScript/ Recoil/ Material UI/ etc.
               </span>
             </div>
             <div class="flex-center">
@@ -315,22 +375,29 @@
             <p>Designed, and developed many features such as:</p>
             <ul>
               <li class="tasks">
-                Base project, components reusable, rich editor,... base on Material UI
+                Base project, components reusable, rich editor, etc, base on Material UI
               </li>
-              <li class="tasks">Dynamic dashboard using widgets, text boxes,...</li>
               <li class="tasks">
-                Build SQL editor, writing clause to retrieve data, virtualize data in table, chart
-                (bar, pie, line, scatter, bubble,...), map choropleth, map markers, sunburst
-                sequence,...
+                Construct a dynamic overview page by integrating widgets. Each widget allows
+                customers to select content, which can be either a data table or one of the provided
+                chart types, etc.
+              </li>
+              <li class="tasks">
+                Build SQL, python editor, writing clause to retrieve data, virtualize data in table,
+                chart (bar, pie, line, scatter, bubble, etc.), map choropleth, map markers, sunburst
+                sequence, etc.
               </li>
               <li class="tasks">
                 Real-time attacks map, handle curve, attack infomation, risk level, optimize
-                performance,...
+                performance, etc.
               </li>
-              <li class="tasks">Ticketing system: assigne task, status, timeline,...</li>
+              <li class="tasks">
+                Ticketing system: assigne task, status, timeline, evidence, etc.
+              </li>
               <li class="tasks">Automatic response system</li>
-              <li class="tasks">etc...</li>
+              <li class="tasks">etc.</li>
             </ul>
+            <p>Build application with max performance</p>
             <p>Maintain, improve available features</p>
             <p>Collaborated with the deployment team to bring products to customers</p>
           </li>
@@ -350,8 +417,8 @@
             </div>
             <div style="display: flex; align-items: center">
               <p class="sub__title" style="color: black">
-                <quotes class="sub__title">About project: </quotes> Project offers solution for
-                managing, monitoring, evaluating, processing payments,... for gym facilities.
+                <quotes class="sub__title">About project: </quotes>The project offers solution for
+                managing, monitoring, evaluating, processing payments, etc. for gym facilities.
               </p>
             </div>
             <div class="flex-center">
@@ -370,7 +437,7 @@
             <p>Designed, and developed many features.</p>
             <p>Exchange, contribute opinions to find a solution.</p>
             <p>Implement requirement following coding convention</p>
-            <p>Collaborate with other team members to improve performance,...</p>
+            <p>Collaborate with other team members to improve performance, etc.</p>
           </li>
 
           <!-- GAIA -->
@@ -382,7 +449,7 @@
               </div>
               <span class="sub__title">11/2019 - 03/2021</span>
             </div>
-            <div class="flex-center">
+            <!-- <div class="flex-center">
               <span class="sub__title">Project:</span>
               <span class="sub__title" style="color: black"> &nbsp; GAIA</span>
             </div>
@@ -409,7 +476,7 @@
             <p>Designed, and developed many features.</p>
             <p>Exchange, contribute opinions to find a solution.</p>
             <p>Implement requirement following coding convention</p>
-            <p>Collaborate with other team members to improve performance,...</p>
+            <p>Collaborate with other team members to improve performance,...</p> -->
           </li>
         </ul>
       </section>
@@ -425,13 +492,16 @@
           <li class="tasks" style="margin-left: 80px">
             I became a developer in mid-2019 and have been working ever since.
           </li>
-          <li class="tasks" style="margin-left: 80px">Strong proficiency in ReactJS and Angular</li>
+          <li class="tasks" style="margin-left: 80px">
+            Strong proficiency in ReactJS, Angular, Vue3 composition API and Testing of each
+            framework
+          </li>
           <li class="tasks" style="margin-left: 80px">JavaScript, TypeScript, HTML5, CSS3</li>
-          <li class="tasks" style="margin-left: 80px">State management with Redux and NgRx</li>
-          <li class="tasks" style="margin-left: 80px">RESTful API integration</li>
+          <li class="tasks" style="margin-left: 80px">State management with Redux, NgRx</li>
+          <li class="tasks" style="margin-left: 80px">Restful API integration, postman</li>
           <li class="tasks" style="margin-left: 80px">GitHub/GitLab for version control</li>
           <li class="tasks" style="margin-left: 80px">Docker for deploy</li>
-          <li class="tasks" style="margin-left: 80px">etc...</li>
+          <li class="tasks" style="margin-left: 80px">etc.</li>
         </ul>
       </section>
 
