--- a/index.html
+++ b/index.html
@@ -354,8 +354,9 @@
             <div class="flex">
               <p class="sub__title" style="color: black">
                 <quotes class="sub__title">About project: </quotes>
-                The project provides many features in the field of cyber security and information
-                security, such as: dashboard, monitoring, alerting, querying, ticketing, etc.
+                Is low code project, it project provides many features in the field of cyber
+                security and information security, such as: dashboard, monitoring, alerting,
+                querying, ticketing, etc.
               </p>
             </div>
             <div class="flex-center">
@@ -424,7 +425,7 @@
             <div class="flex-center">
               <span class="sub__title">Techs:</span>
               <span class="sub__title" style="color: black">
-                &nbsp; Angular 12/ Ngrx/ Angular Material...
+                &nbsp; Angular 12/ Ngrx/ Angular Materiale/ etc.
               </span>
             </div>
             <div class="flex-center">
